# adjutant-dns-plugin

./: README.rst  requirements.txt  setup.cfg  setup.py
semicolon_dns/: core.py  default_zone.py  requested_zone.py
