[metadata]
name = adjutant-dns-plugin
author = Siyeong Song
author_email = cyoung06@naver.com
summary = A plugin for Adjutant with DNS actions and tasks.
description_file = README.rst
description_content_type = text/x-rst; charset=UTF-8
home_page = https://github.com/semicolon-cloud/adjutant-dns-plugin
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Framework :: Django :: 1.11
    Programming Language :: Python :: 2.7


keywords =
    openstack
    designate
    tasks
    zonecreation
    workflow

[files]
packages =
    semicolon_dns

[entry_points]
adjutant.feature_sets =
    core = semicolon_dns.core:DNSPlugin
